fix: remove noHistory to prevent Activity destruction on lock screen
The CallkitIncomingActivity was being destroyed within 4 seconds of
showing because android:noHistory="true" caused the system to kill it
as soon as the Flutter MainActivity came to foreground (triggered by
FCM/Firebase processing). The user was then seeing the Flutter app
behind the keyguard instead of the call accept UI.

Changes:
- Remove android:noHistory="true" from CallkitIncomingActivity manifest
- Add android:showWhenLocked="true" to manifest for lock screen support
- Add lifecycle logging (onCreate, onResume, onPause, onStop, onDestroy)
- Enable logging in onAcceptClick and onDeclineClick for diagnostics

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
             android:name="com.hiennv.flutter_callkit_incoming.CallkitIncomingActivity"
             android:taskAffinity="com.hiennv.flutter_callkit_incoming.INCOMING_CALL_AFFINITY"
             android:excludeFromRecents="true"
-            android:noHistory="true"
             android:turnScreenOn="true"
+            android:showWhenLocked="true"
             android:configChanges="orientation"
             android:exported="true"
             android:launchMode="singleInstance"
