feat: add Sentry breadcrumbs to all plugin logs
All log points in CallkitIncomingActivity and
CallkitIncomingBroadcastReceiver now send Sentry breadcrumbs
in addition to Logcat output, enabling remote diagnostics.

- Created SentryHelper utility using reflection (compileOnly dep)
  so it gracefully degrades when Sentry SDK is absent
- CallkitIncomingActivity: full lifecycle logging (onCreate,
  onResume, onPause, onStop, onDestroy) + accept/decline taps
  + timeout + caller info — all with callId context
- CallkitIncomingBroadcastReceiver: all action handlers logged
  with callId and error details on failure
- Added io.sentry:sentry-android as compileOnly in build.gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
     //noinspection GradleDependency
     implementation "io.coil-kt:coil:1.4.0"
+
+    // Sentry: compileOnly so breadcrumbs are sent when host app includes Sentry
+    compileOnly 'io.sentry:sentry-android:7.14.0'
 }
